--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+*,
+:after,
+:before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 100%;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -5,38 +17,78 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App {
+  padding: 3rem 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+  font-weight: 400;
+  line-height: 1;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+}
+
+h1 {
+  font-size: 3.052rem;
+}
+
+h2 {
+  font-size: 2.441rem;
+}
+
+h3 {
+  font-size: 1.953rem;
+}
+
+h4 {
+  font-size: 1.563rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+.title__underline {
+  background: yellowgreen;
+  width: 7rem;
+  height: 0.25rem;
+  margin: 0 auto;
+  margin-top: 1rem;
+}
+
+@media screen and (min-width: 690px) {
+  .pictures {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media screen and (min-width: 960px) {
+  .pictures {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.categories {
+  margin: 1rem 0 2.5rem;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+.pictures__item {
+  position: relative;
+  overflow: hidden;
 }
 
-.card {
-  padding: 2em;
+.pictures__img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s;
 }
-
-.read-the-docs {
-  color: #888;
+.pictures__img:hover {
+  transform: scale(1.2);
 }
