changes in categories color when category is clicked

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Sono&display=swap');
 
-*,
+/* *,
 :after,
 :before {
   margin: 0;
@@ -18,7 +18,7 @@ html {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
 .App {
   padding: 3rem 0;
@@ -64,17 +64,30 @@ h5 {
 }
 
 @media screen and (min-width: 690px) {
+  .App {
+    padding: 3rem 2rem;
+  }
+
   .pictures {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
 }
 @media screen and (min-width: 960px) {
+  .App {
+    padding: 3rem 4rem;
+  }
   .pictures {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+@media screen and (min-width: 1150px) {
+  .App {
+    padding: 3rem 6.5rem;
+  }
+}
 .categories {
+  font-size: 1.2rem;
   margin: 1rem 0;
   display: flex;
   justify-content: center;
@@ -111,6 +124,7 @@ h5 {
 .menu__list .active-nav {
   color: yellowgreen;
 }
+
 .search {
   margin-bottom: 2rem;
 }
